feat: Implementar subvotaciones y manejo de imágenes
